Bug 504516 - Crash on Display disconnect
Summary: Crash on Display disconnect
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.3.5
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: drkonqi
: 504051 504542 504595 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-05-19 11:31 UTC by kalinka
Modified: 2025-05-21 07:29 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.6
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/183591/events/2da4b02fd4ab42c894755ce7a91a4577/


Attachments
New crash information added by DrKonqi (65.12 KB, text/plain)
2025-05-19 11:31 UTC, kalinka
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kalinka 2025-05-19 11:31:08 UTC
Application: kwin_wayland (6.3.5)

ApplicationNotResponding [ANR]: false
Qt Version: 6.9.0
Frameworks Version: 6.14.0
Operating System: Linux 6.14.6-300.fc42.x86_64 x86_64
Windowing System: Wayland
Distribution: "Fedora Linux 42 (KDE Plasma Desktop Edition)"
DrKonqi: 6.3.5 [CoredumpBackend]

-- Information about the crash:
When I Disconnect 2 of my 3 screens (via kvm switch) it can happend that my desktop env crashes and all windows are closed.

The crash can be reproduced sometimes.

-- Backtrace (Reduced):
#5  0x00007f831395d0eb in KWin::DrmOutput::cursorLayer (this=0x559777eac4a0) at /usr/src/debug/kwin-6.3.5-2.fc42.x86_64/src/backends/drm/drm_output.cpp:571
#6  0x00007f8313661310 in operator() (__closure=0x5597792b3f70) at /usr/src/debug/kwin-6.3.5-2.fc42.x86_64/src/compositor_wayland.cpp:505
#7  0x00007f831096033a in QtPrivate::QSlotObjectBase::call (this=0x5597792b3f60, r=0x5597795dd350, a=0x7fffd906b150) at /usr/src/debug/qt6-qtbase-6.9.0-2.fc42.x86_64/src/corelib/kernel/qobjectdefs_impl.h:461
#8  doActivate<false> (sender=0x559777fac720, signal_index=3, argv=argv@entry=0x7fffd906b150) at /usr/src/debug/qt6-qtbase-6.9.0-2.fc42.x86_64/src/corelib/kernel/qobject.cpp:4138
[...]
#11 KWin::Cursors::currentCursorChanged (this=<optimized out>, _t1=<optimized out>) at /usr/src/debug/kwin-6.3.5-2.fc42.x86_64/redhat-linux-build/src/kwin_autogen/include/moc_cursor.cpp:300


Reported using DrKonqi
Comment 1 kalinka 2025-05-19 11:31:09 UTC
Created attachment 181506 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Bug Janitor Service 2025-05-19 12:34:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7635
Comment 3 Zamundaaa 2025-05-19 14:19:36 UTC
Git commit ceb2415e5bc314bb325ddc1664e684844f1a7ff3 by Xaver Hugl.
Committed on 19/05/2025 at 13:17.
Pushed by zamundaaa into branch 'master'.

backends/drm: also guard DrmOutput::cursorLayer for nullptr pipeline

M  +5    -0    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/ceb2415e5bc314bb325ddc1664e684844f1a7ff3
Comment 4 Zamundaaa 2025-05-19 14:51:21 UTC
Git commit 6de888171b0166014797a680b1391c811ac7a18b by Xaver Hugl.
Committed on 19/05/2025 at 14:37.
Pushed by zamundaaa into branch 'Plasma/6.4'.

backends/drm: also guard DrmOutput::cursorLayer for nullptr pipeline


(cherry picked from commit ceb2415e5bc314bb325ddc1664e684844f1a7ff3)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +5    -0    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/6de888171b0166014797a680b1391c811ac7a18b
Comment 5 Zamundaaa 2025-05-19 15:04:14 UTC
Git commit f1f25d2da9e6a7c0b28a333684449cc7733dc388 by Xaver Hugl.
Committed on 19/05/2025 at 14:37.
Pushed by zamundaaa into branch 'Plasma/6.3'.

backends/drm: also guard DrmOutput::cursorLayer for nullptr pipeline


(cherry picked from commit ceb2415e5bc314bb325ddc1664e684844f1a7ff3)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +5    -0    src/backends/drm/drm_output.cpp

https://invent.kde.org/plasma/kwin/-/commit/f1f25d2da9e6a7c0b28a333684449cc7733dc388
Comment 6 Vlad Zahorodnii 2025-05-20 06:56:58 UTC
*** Bug 504051 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2025-05-20 13:31:28 UTC
*** Bug 504542 has been marked as a duplicate of this bug. ***
Comment 8 Vlad Zahorodnii 2025-05-21 07:29:10 UTC
*** Bug 504595 has been marked as a duplicate of this bug. ***