backends/drm: also guard DrmOutput::cursorLayer for nullptr pipeline

BUG: 504516


(cherry picked from commit ceb2415e5bc314bb325ddc1664e684844f1a7ff3)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>